--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             <div class="implement">
                             <div class="input-group">
                                 <input type="text" class="form-control" placeholder="Enter The Ether Address" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                                <span class="input-group-addon" id="">ETHER<a class="top" title="" data-placement="top" data-toggle="tooltip" href="#" data-original-title="Tooltip on top"><span class="glyphicon glyphicon-chevron-down" id='content'></a></span>
+                                <span class="input-group-addon" id="">ETHER</span>
                             </div>
                             <div class="input-group input-group-currency" style="margin: 3% 0;">
                                 <input type="text" name="amount" class="form-control" value="" placeholder="Enter The your Email Address">
