--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@ $(document).ready(function(){
                                 <span class="input-group-addon" id="basic-addon2">TOKEN</span>
                             </div>
                             <label for="">Contribute with:</label>
-                            <div class="input-group input-group-currency"><div class="input-group-addon uppercase" style="color:#00cf70;">you get</div>
+                            <div class="input-group input-group-currency"><div class="input-group-addon uppercase" style="color:#00796b;">you get</div>
                                 <input type="text" name="amount" class="form-control" value="" placeholder="">
                                 <div class="input-group-btn">
-                                    <button type="button" class="btn btn-default dropdown-toggle uppercase dropdown-toggle-big" id='content'><b>ETH</b>
+                                    <button type="button" class="btn btn-default dropdown-toggle uppercase dropdown-toggle-big" id='content'style="background:#eeeeee; !important;">ETH
                                         <span class="glyphicon glyphicon-chevron-down" style="color:#00796b"></span></button>
                             </div>
                             </div>
@@ -173,7 +173,7 @@ $(document).ready(function(){
                             <div class="input-group input-group-currency">
                                 <input type="text" name="amount" class="form-control" value="" placeholder="Enter The your Email Address">
                                 <div class="input-group-btn">
-                                    <button type="button" class="btn btn-default dropdown-toggle uppercase dropdown-toggle-big"><b>EMAIL</b>
+                                    <button type="button" class="btn btn-default dropdown-toggle uppercase dropdown-toggle-big" style="background:#eeeeee; !important;">EMAIL
                                       </button>
                                 </div>
                             </div>
